--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
             <b><span id="bluetooth-is-available-message"></span></b>
             This tool is compatible with desktops (or laptops) with the <b>latest Chrome, Opera and Edge</b> browsers, and working
             Bluetooth connection (most laptops have them these days). You can also try it from Chrome on Android, or Bluefy on iOS/iPadOS.
+            <div>------------------------------------------------------------------------------------------------------------------------------------------------------------------</div>
+            您的瀏覽器中可使用藍牙。該工具與裝有最新 Chrome、Opera 和 Edge 瀏覽器以及有效藍牙連接（如今大多數筆記型電腦都具備）的桌上型電腦（或筆記型電腦）相容。
+            您也可以透過 Android 上的 Chrome 或 iOS/iPadOS 上的 Bluefy 來嘗試。
         </div>
         <div id="connect-block" style="display: none;">
             <div class="form-group form-inline">
