--- a/dashboard.html
+++ b/dashboard.html
@@ -1,73 +1,196 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bluetooth LED Control</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <meta charset="utf-8" />
+    <title>AdminLTE Dashboard</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/all.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/admin-lte@3.2/dist/css/adminlte.min.css" />
+    <link href="css/mcumgr.css" rel="stylesheet" />
+    <meta name="theme-color" content="#563d7c" />
 </head>
-<body>
-    <div class="container mt-5 text-center">
-        <h1>Bluetooth LED Controller</h1>
-        <button id="connectButton" class="btn btn-primary">🔗 Connect</button>
-        <button id="toggleLedButton" class="btn btn-success" disabled>💡 Toggle LED</button>
-        <p id="status" class="mt-3">Status: Disconnected</p>
+
+<body class="hold-transition sidebar-mini layout-fixed">
+    <div class="wrapper">
+        <!-- 頂部導覽列 Navbar -->
+        <nav class="main-header navbar navbar-expand navbar-white navbar-light">
+            <!-- 左側漢堡按鈕 -->
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
+                </li>
+            </ul>
+            <!-- 在 Navbar 中加入 device-name -->
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        <span id="device-name">Raymarine</span>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+        <!-- /頂部導覽列 -->
+
+        <!-- 左側選單 Side bar -->
+        <aside class="main-sidebar sidebar-dark-primary elevation-4">
+            <!-- Brand Logo -->
+            <a href="#" class="brand-link">
+                <img src="https://adminlte.io/themes/v3/dist/img/AdminLTELogo.png" alt="AdminLTE Logo"
+                    class="brand-image img-circle elevation-3" style="opacity: .8" />
+                <span class="brand-text font-weight-light">Raymarine</span>
+            </a>
+            <!-- 側邊選單 -->
+            <nav class="mt-2">
+                <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu"
+                    data-accordion="false">
+                    <li class="nav-item">
+                        <a href="#" class="nav-link active">
+                            <i class="nav-icon fas fa-tachometer-alt"></i>
+                            <p>Dashboard</p>
+                        </a>
+                    </li>
+                    <!-- 其他選單... -->
+                </ul>
+            </nav>
+            <!-- /.側邊選單 -->
+        </aside>
+
+        <!-- 內容區 Content Wrapper -->
+        <div class="content-wrapper">
+            <!-- 上方內容標頭 -->
+            <section class="content-header">
+                <div class="container-fluid">
+                    <h1>Dashboard</h1>
+                </div>
+            </section>
+
+            <!-- 主要內容區 -->
+            <section class="content">
+                <div class="container-fluid">
+
+                    <!-- 藍牙連線功能區 -->
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="card card-primary card-outline">
+                                <div class="card-header">
+                                    <h3 class="card-title">藍牙連線</h3>
+                                </div>
+                                <div class="card-body">
+                                    <!-- 初始狀態區塊 -->
+                                    <div class="content" id="initial-screen">
+                                        <div class="alert alert-primary" role="alert" id="bluetooth-is-available">
+                                            <b><span id="bluetooth-is-available-message"></span></b>
+                                            <p>This tool is compatible with desktops (or laptops) with the <b>latest
+                                                    Chrome, Opera and Edge</b> browsers, and working
+                                                Bluetooth connection (most laptops have them these days). You can also
+                                                try it from Chrome on Android, or Bluefy on
+                                                iOS/iPadOS.
+                                            <div>
+                                                ------------------------------------------------------------------------------------------------------------------------------------------------------------------
+                                            </div>
+                                            您的瀏覽器中可使用藍牙。該工具與裝有最新 Chrome、Opera 和 Edge
+                                            瀏覽器以及有效藍牙連接（如今大多數筆記型電腦都具備）的桌上型電腦（或筆記型電腦）相容。
+                                            您也可以透過 Android 上的 Chrome 或 iOS/iPadOS 上的 Bluefy 來嘗試。</p>
+                                        </div>
+                                        <!-- 連線按鈕區塊 -->
+                                        <div id="connect-block" style="display: none;">
+                                            <div class="form-group form-inline">
+                                                <div class="col-auto">
+                                                    <input id="device-name-input" type="text" class="form-control"
+                                                        placeholder="Device name (optional)">
+                                                </div>
+                                                <div class="col-auto">
+                                                    <button id="button-connect" type="submit" class="btn btn-primary"><i
+                                                            class="bi-bluetooth"></i> Connect</button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <!-- 連線中狀態 -->
+                                    <div class="content" id="connecting-screen" style="display: none;">
+                                        <div class="alert alert-primary" role="alert">
+                                            Connecting...
+                                        </div>
+                                    </div>
+
+                                    <!-- 已連線狀態 -->
+                                    <div class="content" id="connected-screen" style="display: none;">
+                                        <div class="container">
+                                            <div>
+                                                <button id="button-echo" type="submit" class="btn btn-primary"><i
+                                                        class="bi-soundwave"></i> Echo</button>
+                                                <button id="button-disconnect" type="submit"
+                                                    class="btn btn-secondary"><i class="bi-x-square"></i>
+                                                    Disconnect</button>
+                                                <button id="button-reset" type="submit" class="btn btn-info"><i
+                                                        class="bi-arrow-clockwise"></i> Reset</button>
+                                            </div>
+                                            <hr />
+                                            <h3>Images</h3>
+                                            <div id="image-list"></div>
+                                            <div>
+                                                <button id="button-image-state" type="submit" class="btn btn-info"><i
+                                                        class="bi-arrow-down-circle"></i> Refresh</button>
+                                                <button id="button-erase" type="submit" class="btn btn-warning"><i
+                                                        class="bi-eraser-fill"></i> Erase</button>
+                                                <button id="button-test" type="submit" class="btn btn-primary"
+                                                    disabled><i class="bi-question-square"></i> Test</button>
+                                                <button id="button-confirm" type="submit" class="btn btn-success"
+                                                    disabled><i class="bi-check2-square"></i> Confirm</button>
+                                            </div>
+                                            <hr />
+                                            <h3>Image Upload</h3>
+                                            <div class="form-group">
+                                                <input type="file" class="form-control" id="file-image" />
+                                            </div>
+                                            <div class="image">
+                                                <div class="form-group">
+                                                    <div id="file-status">Select image file (.img)</div>
+                                                    <div id="file-info"></div>
+                                                </div>
+                                                <button class="btn btn-primary" id="file-upload" disabled><i
+                                                        class="bi-upload"></i> Upload</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!-- /連線狀態區塊 -->
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- /.row 藍牙連線功能區 -->
+
+                </div>
+                <!-- /.container-fluid -->
+            </section>
+            <!-- /.主要內容區 -->
+        </div>
+        <!-- /.content-wrapper -->
+
+        <!-- 頁尾 -->
+        <footer class="main-footer">
+            <strong>Copyright &copy; 2025
+                <a href="#">MSI ACS-SW</a>.
+            </strong>
+            All rights reserved.
+        </footer>
     </div>
+    <!-- ./wrapper -->
 
-    <script>
-        let device;
-        let characteristic;
-        const LED_SERVICE_UUID = '0000ffe0-0000-1000-8000-00805f9b34fb'; // 你的 BLE 服務 UUID
-        const LED_CHARACTERISTIC_UUID = '0000ffe1-0000-1000-8000-00805f9b34fb'; // 控制 LED 的特徵值 UUID
+    <!-- ===== JS ===== -->
+    <!-- jQuery (AdminLTE) -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <!-- Bootstrap 4 -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- AdminLTE App -->
+    <script src="https://cdn.jsdelivr.net/npm/admin-lte@3.2/dist/js/adminlte.min.js"></script>
 
-        document.getElementById('connectButton').addEventListener('click', async () => {
-            try {
-                console.log("🔍 搜尋藍牙裝置...");
-                device = await navigator.bluetooth.requestDevice({
-                    acceptAllDevices: true,
-                    optionalServices: [LED_SERVICE_UUID]
-                });
-
-                console.log("🔗 連接至裝置:", device.name);
-                document.getElementById('status').textContent = `Status: Connecting...`;
-                const server = await device.gatt.connect();
-                
-                console.log("📡 獲取 GATT 服務...");
-                const service = await server.getPrimaryService(LED_SERVICE_UUID);
-                
-                console.log("💾 獲取 LED 特徵值...");
-                characteristic = await service.getCharacteristic(LED_CHARACTERISTIC_UUID);
-
-                document.getElementById('status').textContent = `Status: Connected to ${device.name}`;
-                document.getElementById('toggleLedButton').disabled = false;
-
-            } catch (error) {
-                console.error("⚠️ 連線錯誤:", error);
-                document.getElementById('status').textContent = `Status: Connection Failed`;
-            }
-        });
-
-        document.getElementById('toggleLedButton').addEventListener('click', async () => {
-            if (!characteristic) {
-                console.error("⚠️ 請先連接藍牙裝置！");
-                return;
-            }
-
-            try {
-                let command = new Uint8Array([1]); // 1 = 開燈, 0 = 關燈
-                await characteristic.writeValue(command);
-                console.log("✅ LED 開啟");
-
-                setTimeout(async () => {
-                    let offCommand = new Uint8Array([0]);
-                    await characteristic.writeValue(offCommand);
-                    console.log("🚫 LED 關閉");
-                }, 3000); // 3 秒後關閉 LED
-
-            } catch (error) {
-                console.error("❌ 無法寫入數據:", error);
-            }
-        });
-    </script>
+    <script src="js/cbor.js"></script>
+    <script src="js/mcumgr.js?v=6"></script>
+    <script src="js/index.js?v=6"></script>
 </body>
+
 </html>
