--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/mcumgr.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
     <meta name="theme-color" content="#563d7c">
+
 </head>
 <body>
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
@@ -74,6 +77,16 @@
                 </div>
                 <button class="btn btn-primary" id="file-upload" disabled><i class="bi-upload"></i> Upload</button>
             </div>
+            <hr />
+            <h3>Function Test</h3>
+            <div class="container mt-5 text-center">
+                <h1>Bluetooth LED Controller</h1>
+                <button id="toggleLedButton" class="btn btn-success" disabled>💡 Toggle LED</button>
+                <button id="toggleLedButton" class="btn btn-success" disabled>🔗 Wi-Fi </button>
+
+                <p id="status" class="mt-3">Status: Disconnected</p>
+            </div>
+
         </div>
     </div>
 </div>
