--- a/dashboard.html
+++ b/dashboard.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>AdminLTE Dashboard</title>
+    <title>Raymarine</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/all.min.css" />
@@ -23,13 +23,13 @@
                 </li>
             </ul>
             <!-- 在 Navbar 中加入 device-name -->
-            <ul class="navbar-nav ml-auto">
+            <!-- <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
                     <a class="nav-link" href="#">
                         <span id="device-name">Raymarine</span>
                     </a>
                 </li>
-            </ul>
+            </ul> -->
         </nav>
         <!-- /頂部導覽列 -->
 
@@ -75,7 +75,7 @@
                         <div class="col-12">
                             <div class="card card-primary card-outline">
                                 <div class="card-header">
-                                    <h3 class="card-title">藍牙連線</h3>
+                                    <h3 class="card-title">connect</h3>
                                 </div>
                                 <div class="card-body">
                                     <!-- 初始狀態區塊 -->
