--- a/dashboard.html
+++ b/dashboard.html
@@ -168,8 +168,12 @@
                                             <div class="container mt-5 text-center">
                                                 <h1>Function Test</h1>
 
-                                                <button id="toggleLedButton" class="btn btn-success" disabled>💡 Toggle
+                                                <!-- <button id="button-led" class="submit" disabled>💡 Toggle
+                                                    LED</button> -->
+                                                <button id="button-led" type="submit" class="btn btn-primary"><i
+                                                    class="bi-soundwave"></i>💡 Toggle
                                                     LED</button>
+
                                                 <button id="toggleLedButton" class="btn btn-success" disabled>🔗 Wi-Fi
                                                 </button>
                                                 <button id="button-echo" type="submit" class="btn btn-primary"><i
