--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
+<!-- Original page -->
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -14,84 +16,99 @@
     <meta name="theme-color" content="#563d7c">
 
 </head>
+
 <body>
-<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="#">
-        <span id="device-name">Raymarine Dashboard</span>
-    </a>
-</nav>
-<main role="main" class="container">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+        <a class="navbar-brand" href="#">
+            <span id="device-name">Raymarine Dashboard</span>
+        </a>
+    </nav>
+    <main role="main" class="container">
 
-<div class="starter-template">
-    <h1>mcumgr web</h1>
-    <div class="content" id="initial-screen">
-        <div class="alert alert-primary" role="alert" id="bluetooth-is-available">
-            <b><span id="bluetooth-is-available-message"></span></b>
-            This tool is compatible with desktops (or laptops) with the <b>latest Chrome, Opera and Edge</b> browsers, and working
-            Bluetooth connection (most laptops have them these days). You can also try it from Chrome on Android, or Bluefy on iOS/iPadOS.
-            <div>------------------------------------------------------------------------------------------------------------------------------------------------------------------</div>
-            您的瀏覽器中可使用藍牙。該工具與裝有最新 Chrome、Opera 和 Edge 瀏覽器以及有效藍牙連接（如今大多數筆記型電腦都具備）的桌上型電腦（或筆記型電腦）相容。
-            您也可以透過 Android 上的 Chrome 或 iOS/iPadOS 上的 Bluefy 來嘗試。
-        </div>
-        <div id="connect-block" style="display: none;">
-            <div class="form-group form-inline">
-                <div class="col-auto">
-                    <input id="device-name-input" type="text" class="form-control" id="device-name-input" placeholder="Device name (optional)">
+        <div class="starter-template">
+            <h1>mcumgr web</h1>
+            <div class="content" id="initial-screen">
+                <div class="alert alert-primary" role="alert" id="bluetooth-is-available">
+                    <b><span id="bluetooth-is-available-message"></span></b>
+                    This tool is compatible with desktops (or laptops) with the <b>latest Chrome, Opera and Edge</b>
+                    browsers, and working
+                    Bluetooth connection (most laptops have them these days). You can also try it from Chrome on
+                    Android, or Bluefy on iOS/iPadOS.
+                    <div>
+                        ------------------------------------------------------------------------------------------------------------------------------------------------------------------
+                    </div>
+                    您的瀏覽器中可使用藍牙。該工具與裝有最新 Chrome、Opera 和 Edge 瀏覽器以及有效藍牙連接（如今大多數筆記型電腦都具備）的桌上型電腦（或筆記型電腦）相容。
+                    您也可以透過 Android 上的 Chrome 或 iOS/iPadOS 上的 Bluefy 來嘗試。
                 </div>
-                <div class="col-auto">
-                    <button id="button-connect" type="submit" class="btn btn-primary"><i class="bi-bluetooth"></i> Connect</button>
+                <div id="connect-block" style="display: none;">
+                    <div class="form-group form-inline">
+                        <div class="col-auto">
+                            <input id="device-name-input" type="text" class="form-control" id="device-name-input"
+                                placeholder="Device name (optional)">
+                        </div>
+                        <div class="col-auto">
+                            <button id="button-connect" type="submit" class="btn btn-primary"><i
+                                    class="bi-bluetooth"></i> Connect</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="content" id="connecting-screen" style="display: none;">
+                <div class="alert alert-primary" role="alert">
+                    Connecting...
+                </div>
+            </div>
+            <div class="content" id="connected-screen" style="display: none;">
+                <div class="container">
+                    <div>
+                        <button id="button-echo" type="submit" class="btn btn-primary"><i class="bi-soundwave"></i>
+                            Echo</button>
+                        <button id="button-disconnect" type="submit" class="btn btn-secondary"><i
+                                class="bi-x-square"></i> Disconnect</button>
+                        <button id="button-reset" type="submit" class="btn btn-info"><i class="bi-arrow-clockwise"></i>
+                            Reset</button>
+                    </div>
+                    <hr />
+                    <h3>Images</h3>
+                    <div id="image-list"></div>
+                    <div>
+                        <button id="button-image-state" type="submit" class="btn btn-info"><i
+                                class="bi-arrow-down-circle"></i> Refresh</button>
+                        <button id="button-erase" type="submit" class="btn btn-warning"><i class="bi-eraser-fill"></i>
+                            Erase</button>
+                        <button id="button-test" type="submit" class="btn btn-primary" disabled><i
+                                class="bi-question-square"></i> Test</button>
+                        <button id="button-confirm" type="submit" class="btn btn-success" disabled><i
+                                class="bi-check2-square"></i> Confirm</button>
+                    </div>
+                    <hr />
+                    <h3>Image Upload</h3>
+                    <div class="form-group">
+                        <input type="file" class="form-control" id="file-image" />
+                    </div>
+                    <div class="image">
+                        <div class="form-group">
+                            <div id="file-status">Select image file (.img)</div>
+                            <div id="file-info"></div>
+                        </div>
+                        <button class="btn btn-primary" id="file-upload" disabled><i class="bi-upload"></i>
+                            Upload</button>
+                    </div>
+                    <hr />
+                    <h3>Function Test</h3>
+                    <div class="container mt-5 text-center">
+                        <h1>Bluetooth LED Controller</h1>
+                        <button id="toggleLedButton" class="btn btn-success" disabled>💡 Toggle LED</button>
+                        <button id="toggleLedButton" class="btn btn-success" disabled>🔗 Wi-Fi </button>
+
+                        <p id="status" class="mt-3">Status: Disconnected</p>
+                    </div>
+
                 </div>
             </div>
         </div>
-    </div>
-    <div class="content" id="connecting-screen" style="display: none;">
-        <div class="alert alert-primary" role="alert">
-            Connecting...
-          </div>
-    </div>
-    <div class="content" id="connected-screen" style="display: none;">
-        <div class="container">
-            <div>
-                <button id="button-echo" type="submit" class="btn btn-primary"><i class="bi-soundwave"></i> Echo</button>
-                <button id="button-disconnect" type="submit" class="btn btn-secondary"><i class="bi-x-square"></i> Disconnect</button>
-                <button id="button-reset" type="submit" class="btn btn-info"><i class="bi-arrow-clockwise"></i> Reset</button>
-            </div>
-            <hr />
-            <h3>Images</h3>
-            <div id="image-list"></div>
-            <div>
-                <button id="button-image-state" type="submit" class="btn btn-info"><i class="bi-arrow-down-circle"></i> Refresh</button>
-                <button id="button-erase" type="submit" class="btn btn-warning"><i class="bi-eraser-fill"></i> Erase</button>
-                <button id="button-test" type="submit" class="btn btn-primary" disabled><i class="bi-question-square"></i> Test</button>
-                <button id="button-confirm" type="submit" class="btn btn-success" disabled><i class="bi-check2-square"></i> Confirm</button>
-            </div>
-            <hr />
-            <h3>Image Upload</h3>
-            <div class="form-group">
-                <input type="file" class="form-control" id="file-image" />
-            </div>
-            <div class="image">
-                <div class="form-group">
-                    <div id="file-status">Select image file (.img)</div>
-                    <div id="file-info"></div>
-                </div>
-                <button class="btn btn-primary" id="file-upload" disabled><i class="bi-upload"></i> Upload</button>
-            </div>
-            <hr />
-            <h3>Function Test</h3>
-            <div class="container mt-5 text-center">
-                <h1>Bluetooth LED Controller</h1>
-                <button id="toggleLedButton" class="btn btn-success" disabled>💡 Toggle LED</button>
-                <button id="toggleLedButton" class="btn btn-success" disabled>🔗 Wi-Fi </button>
 
-                <p id="status" class="mt-3">Status: Disconnected</p>
-            </div>
-
-        </div>
-    </div>
-</div>
-
-<script src="js/cbor.js"></script>
-<script src="js/mcumgr.js?v=6"></script>
-<script src="js/index.js?v=6"></script>
-</main>
+        <script src="js/cbor.js"></script>
+        <script src="js/mcumgr.js?v=6"></script>
+        <script src="js/index.js?v=6"></script>
+    </main>
