--- a/test.html
+++ b/test.html
@@ -1,10 +1,9 @@
-<!-- Test page -->
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="utf-8" />
-    <title>Function Test</title>
+    <title>Test Page - LED 控制與測試</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- Bootstrap, Font Awesome, AdminLTE -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" />
@@ -60,6 +59,11 @@
             <section class="content-header">
                 <div class="container-fluid">
                     <h1>LED 控制與測試</h1>
+                    <!-- 新增 Device ID 顯示區 -->
+                    <div class="mt-2">
+                        <strong>Device ID:</strong>
+                        <span id="device-id-display">未連線</span>
+                    </div>
                 </div>
             </section>
 
@@ -117,41 +121,12 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/admin-lte@3.2/dist/js/adminlte.min.js"></script>
-    <!-- 如果需要，也可引入 cbor.js、mcumgr.js、index.js -->
+    <!-- 引入必要的腳本 -->
     <script src="js/cbor.js"></script>
     <script src="js/mcumgr.js?v=6"></script>
     <script src="js/index.js?v=6"></script>
 
-    <!-- LED 控制與測試邏輯 -->
-    <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            let ledOn = false;
-            const ledButton = document.getElementById("btn-led");
-            const testStatus = document.getElementById("test-status");
 
-            // LED 控制按鈕事件
-            ledButton.addEventListener("click", function () {
-                // 依據當前狀態決定要發送的指令：diag led on 或 diag led off
-                const cmd = ledOn ? "diag led off" : "diag led on";
-                // 送出 Shell Command (需依照專案架構確保 mcumgr 連線狀態)
-                if (typeof mcumgr !== "undefined" && mcumgr._sendMessage) {
-                    mcumgr._sendMessage(2, 9, 0, { line: cmd });
-                }
-                // 更新按鈕文字與狀態
-                ledOn = !ledOn;
-                ledButton.innerText = ledOn ? "Turn LED Off" : "Turn LED On";
-            });
-
-            // 測試結果按鈕邏輯：Pass
-            document.getElementById("btn-pass").addEventListener("click", function () {
-                testStatus.innerText = "Pass";
-            });
-            // 測試結果按鈕邏輯：Fail
-            document.getElementById("btn-fail").addEventListener("click", function () {
-                testStatus.innerText = "Fail";
-            });
-        });
-    </script>
 </body>
 
 </html>
