--- a/test.html
+++ b/test.html
@@ -1,157 +1,37 @@
-<!-- Test page -->
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8" />
-    <title>Function Test</title>
+    <title>Test Page - LED 控制與測試</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- Bootstrap, Font Awesome, AdminLTE -->
+    <!-- 引入 CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/all.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/admin-lte@3.2/dist/css/adminlte.min.css" />
 </head>
-
 <body class="hold-transition sidebar-mini layout-fixed">
-    <div class="wrapper">
-        <!-- Navbar -->
-        <nav class="main-header navbar navbar-expand navbar-white navbar-light">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" data-widget="pushmenu" href="#" role="button">
-                        <i class="fas fa-bars"></i>
-                    </a>
-                </li>
-            </ul>
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">
-                        <span id="device-name">Raymarine</span>
-                    </a>
-                </li>
-            </ul>
-        </nav>
-        <!-- /Navbar -->
-
-        <!-- Sidebar -->
-        <aside class="main-sidebar sidebar-dark-primary elevation-4">
-            <a href="#" class="brand-link">
-                <img src="https://adminlte.io/themes/v3/dist/img/AdminLTELogo.png" alt="AdminLTE Logo"
-                    class="brand-image img-circle elevation-3" style="opacity: .8" />
-                <span class="brand-text font-weight-light">Raymarine</span>
-            </a>
-            <nav class="mt-2">
-                <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu"
-                    data-accordion="false">
-                    <li class="nav-item">
-                        <a href="#" class="nav-link active">
-                            <i class="nav-icon fas fa-tachometer-alt"></i>
-                            <p>Test Page</p>
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-        </aside>
-        <!-- /Sidebar -->
-
-        <!-- Content Wrapper -->
-        <div class="content-wrapper">
-            <!-- Header -->
-            <section class="content-header">
-                <div class="container-fluid">
-                    <h1>LED 控制與測試</h1>
-                </div>
-            </section>
-
-            <!-- Main content -->
-            <section class="content">
-                <div class="container-fluid">
-                    <!-- 以 Row 分成左右兩欄 -->
-                    <div class="row">
-                        <!-- 左側：LED 控制卡 -->
-                        <div class="col-md-6">
-                            <div class="card card-primary">
-                                <div class="card-header">
-                                    <h3 class="card-title">LED 控制</h3>
-                                </div>
-                                <div class="card-body">
-                                    <button id="btn-led" type="button" class="btn btn-primary">Turn LED On</button>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- 右側：測試結果卡 -->
-                        <div class="col-md-6">
-                            <div class="card card-secondary">
-                                <div class="card-header">
-                                    <h3 class="card-title">測試結果</h3>
-                                </div>
-                                <div class="card-body">
-                                    <div class="mb-3">
-                                        <strong>Status: </strong>
-                                        <span id="test-status">N/A</span>
-                                    </div>
-                                    <button id="btn-pass" type="button" class="btn btn-success">Pass</button>
-                                    <button id="btn-fail" type="button" class="btn btn-danger">Fail</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- /Row -->
-                </div>
-            </section>
-            <!-- /Main content -->
-        </div>
-        <!-- /Content Wrapper -->
-
-        <!-- Footer -->
-        <footer class="main-footer">
-            <strong>Copyright &copy; 2025
-                <a href="#">MSI ACS-SW</a>.
-            </strong>
-            All rights reserved.
-        </footer>
-    </div>
-    <!-- /Wrapper -->
-
-    <!-- JS Libraries -->
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/admin-lte@3.2/dist/js/adminlte.min.js"></script>
-    <!-- 如果需要，也可引入 cbor.js、mcumgr.js、index.js -->
-    <script src="js/cbor.js"></script>
-    <script src="js/mcumgr.js?v=6"></script>
-    <script src="js/index.js?v=6"></script>
-
-    <!-- LED 控制與測試邏輯 -->
-    <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            let ledOn = false;
-            const ledButton = document.getElementById("btn-led");
-            const testStatus = document.getElementById("test-status");
-
-            // LED 控制按鈕事件
-            ledButton.addEventListener("click", function () {
-                // 依據當前狀態決定要發送的指令：diag led on 或 diag led off
-                const cmd = ledOn ? "diag led off" : "diag led on";
-                // 送出 Shell Command (需依照專案架構確保 mcumgr 連線狀態)
-                if (typeof mcumgr !== "undefined" && mcumgr._sendMessage) {
-                    mcumgr._sendMessage(2, 9, 0, { line: cmd });
-                }
-                // 更新按鈕文字與狀態
-                ledOn = !ledOn;
-                ledButton.innerText = ledOn ? "Turn LED Off" : "Turn LED On";
-            });
-
-            // 測試結果按鈕邏輯：Pass
-            document.getElementById("btn-pass").addEventListener("click", function () {
-                testStatus.innerText = "Pass";
-            });
-            // 測試結果按鈕邏輯：Fail
-            document.getElementById("btn-fail").addEventListener("click", function () {
-                testStatus.innerText = "Fail";
-            });
+  <div class="container mt-4">
+    <h1>Web Bluetooth 測試頁面</h1>
+    <p>後端確認的 BT MAC: <strong>{{ bt_mac }}</strong></p>
+    <button id="connect-btn" class="btn btn-primary">使用 Web Bluetooth 連線 Nordic nRF52840-DK</button>
+  </div>
+  <script>
+    document.getElementById("connect-btn").addEventListener("click", async function () {
+      try {
+        // 使用 Web Bluetooth API 掃描符合條件的設備（此例以 Nordic nRF52840-DK 為例）
+        const device = await navigator.bluetooth.requestDevice({
+          filters: [{ namePrefix: "nRF52840-DK" }],
+          optionalServices: ['8d53dc1d-1db7-4cd3-868b-8a527460aa84']
         });
-    </script>
+        console.log("連線設備:", device);
+        alert("已連線至: " + device.name);
+        // 此處可加入後續的測試邏輯
+      } catch (error) {
+        console.error("連線失敗:", error);
+        alert("連線失敗: " + error);
+      }
+    });
+  </script>
+  <script src="https://ddei5-0-ctp.trendmicro.com:443/wis/clicktime/v1/query?url=https%3a%2f%2fcode.jquery.com%2fjquery%2d3.5.1.min.js&umid=D6273770-2F07-6206-877C-5FB71DAA9220&auth=16b2c1eae615e662aa232d8bf19321a46f4b3211-ee48a24448c5034934785ac3feeb43193e4558d8"></script>
+  <script src="https://ddei5-0-ctp.trendmicro.com:443/wis/clicktime/v1/query?url=https%3a%2f%2fcdn.jsdelivr.net%2fnpm%2fbootstrap%404.6.2%2fdist%2fjs%2fbootstrap.bundle.min.js&umid=D6273770-2F07-6206-877C-5FB71DAA9220&auth=16b2c1eae615e662aa232d8bf19321a46f4b3211-b6dbc82d2e6b7811e21f11eb60932118f93fb29b"></script>
 </body>
-
 </html>
