--- a/dashboard.html
+++ b/dashboard.html
@@ -103,7 +103,7 @@
                                             <b><span id="bluetooth-is-available-message"></span></b>
                                             您的瀏覽器中可使用藍牙。該工具與裝有最新 Chrome、Opera 和 Edge
                                             瀏覽器以及有效藍牙連接
-                                            請在下方輸入篩選條件（例如 F7:B5:CC:BD:E1:91 將自動轉為 E191），然後按 Connect。
+                                            請在下方輸入篩選條件（例如 F7:B5:CC:BD:Ze:ph 將自動轉為 Zeph），然後按 Connect。
                                         </div>
                                         <!-- 連線按鈕區塊 -->
                                         <div id="connect-block" style="display: none;">
