--- a/dashboard.html
+++ b/dashboard.html
@@ -225,9 +225,9 @@
                                                                     </div>
                                                                 </div>
                                                                 <hr>
-                                                                <!-- SW2/3 測試區 -->
+                                                                <!-- SW2 測試區 -->
 																<div class="form-group">
-                                                                    <label>請按SW2，確認LED是否開 / 請按SW3，確認LED是否關</label>
+                                                                    <label>請按SW2，確認LED是否開</label>
                                                                     <div class="mb-3">
                                                                         <!-- 提交按鈕 -->
                                                                         <button id="sw2-submit" class="btn btn-primary">SW2 & SW3 button</button>
@@ -241,6 +241,25 @@
                                                                         </div>
                                                                         <!-- 顯示結果 badge -->
                                                                         <span id="sw2-status" class="ml-2"></span>
+                                                                    </div>
+                                                                </div>
+                                                                <hr />
+                                                                <!-- SW3 測試區 -->
+																<div class="form-group">
+                                                                    <label>請按SW3，確認LED是否關</label>
+                                                                    <div class="mb-3">
+                                                                        <!-- 提交按鈕 -->
+                                                                        <button id="sw3-submit" class="btn btn-primary">SW3 button</button>
+                                                                        <div class="form-check form-check-inline">
+                                                                            <input type="checkbox" class="form-check-input sw3-checkbox" id="sw3-pass" value="Pass">
+                                                                            <label class="form-check-label" for="sw3-pass">Pass</label>
+                                                                        </div>
+                                                                        <div class="form-check form-check-inline">
+                                                                            <input type="checkbox" class="form-check-input sw3-checkbox" id="sw3-fail" value="Fail">
+                                                                            <label class="form-check-label" for="sw3-fail">Fail</label>
+                                                                        </div>
+                                                                        <!-- 顯示結果 badge -->
+                                                                        <span id="sw3-status" class="ml-2"></span>
                                                                     </div>
                                                                 </div>
                                                                 <hr />
