--- a/dashboard.html
+++ b/dashboard.html
@@ -490,7 +490,9 @@
                                                                     <div class="card-body">
                                                                         <input type="file" id="config-file" class="form-control">
                                                                         <button id="upload-config" class="btn btn-info mt-2">上傳設定檔</button>
-                                                                        <div id="config-message" class="mt-2 text-info"></div>
+                                                                        <hr>
+                                                                        <B><div id="config-message" class="mt-2 text-info"></div></B>
+                                                                        <div id="current-config" class="mt-2 text-info" style="margin-bottom: 10px;"></div>
                                                                     </div>
                                                                 </div>
                                                                 <!-- Version -->
@@ -566,8 +568,8 @@
                                                                 <button id="button-battery" type="button" class="btn btn-info">Battery</button>
                                                                 <div class="mb-3">
                                                                     <strong>Voltage: </strong>
-                                                                    <span id="battery-output-status" class="ml-2"><span
-                                                                        class="badge badge-warning"></span></span>
+                                                                    <b><span id="battery-output-status" class="ml-2"><span
+                                                                        class="badge badge-warning"></span></span></b>
                                                                     <span id="battery-status" class="ml-2"><span
                                                                             class="badge badge-warning">N/A</span></span>
                                                                 </div>
